Update the analytics report

--- a/SpotifySongs_Music_Analytics_Report.ipynb
+++ b/SpotifySongs_Music_Analytics_Report.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d21c9ac7",
+   "id": "c8816ba9",
    "metadata": {},
    "source": [
     "# Spotify Songs: Music Analytics Report"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "aed00efd",
+   "cell_type": "markdown",
+   "id": "7ff799aa",
    "metadata": {},
    "source": [
     "Pubudu Wanigasekara | 9152PS2023018 [MSC/DSA/066]"
@@ -18,27 +18,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bfb5a4c",
+   "id": "eddad2bb",
    "metadata": {},
    "source": [
-    "# Overview:\n",
+    "## Overview:\n",
     "    This report provides an in-depth analysis of various musical attributes across a selection of tracks. The aim is to uncover trends and patterns in music composition and listener preferences."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4f982461",
+   "cell_type": "markdown",
+   "id": "a437d330",
    "metadata": {},
    "source": [
-    "Data Set: https://github.com/rfordatascience/tidytuesday/tree/master/data/2020/2020-01-21"
+    "## Data Set: \n",
+    " \n",
+    "https://github.com/rfordatascience/tidytuesday/tree/master/data/2020/2020-01-21"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "036e1b43",
+   "cell_type": "markdown",
+   "id": "d7127aca",
    "metadata": {},
    "source": [
-    "Contents:\n",
+    "## Contents:\n",
     "    \n",
     "    01) Genre Popularity\n",
     "\n",
@@ -68,22 +70,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a60a2f",
+   "id": "f675dbd9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "raw",
-   "id": "19a94db5",
+   "cell_type": "markdown",
+   "id": "c703974f",
    "metadata": {},
    "source": [
-    "Import the necessary  python modules"
+    "### Import the necessary  python modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "f3508a4b",
    "metadata": {},
    "outputs": [],
@@ -94,16 +96,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fb6733a5",
+   "cell_type": "markdown",
+   "id": "25fd9273",
    "metadata": {},
    "source": [
-    "Import csv data"
+    "### Import csv data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "21d92782",
    "metadata": {},
    "outputs": [],
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "c79a0e18",
    "metadata": {},
    "outputs": [
@@ -273,7 +275,7 @@
        "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "40f5488c",
    "metadata": {},
    "outputs": [],
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "3661cd08",
    "metadata": {},
    "outputs": [
@@ -304,7 +306,7 @@
        "(32833, 23)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,12 +328,12 @@
    "id": "e7152a52",
    "metadata": {},
    "source": [
-    "# 01) Genre Popularity: Showing the number of tracks per playlist genre to understand which genres are most represented."
+    "## 01) Genre Popularity: Showing the number of tracks per playlist genre to understand which genres are most represented."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "7d8b5ae4",
    "metadata": {},
    "outputs": [],
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "9876826f",
    "metadata": {},
    "outputs": [
@@ -373,10 +375,10 @@
   },
   {
    "cell_type": "raw",
-   "id": "4f48ea2f",
+   "id": "91c600aa",
    "metadata": {},
    "source": [
-    "# The bar chart displays the number of tracks for each playlist genre, providing a visual representation of genre popularity. The genres are listed along the horizontal axis, while the vertical axis shows the number of tracks. Each genre is represented by a bar, the height of which corresponds to the number of tracks in that genre. This allows for easy comparison between genres to see which ones have the most tracks and are, therefore, the most popular within the dataset."
+    "The bar chart displays the number of tracks for each playlist genre, providing a visual representation of genre popularity. The genres are listed along the horizontal axis, while the vertical axis shows the number of tracks. Each genre is represented by a bar, the height of which corresponds to the number of tracks in that genre. This allows for easy comparison between genres to see which ones have the most tracks and are, therefore, the most popular within the dataset."
    ]
   },
   {
@@ -384,12 +386,12 @@
    "id": "ee6f3e4b",
    "metadata": {},
    "source": [
-    "# 02) Key Distribution: Show the distribution of musical keys across all tracks to find out if some keys are more common in popular music."
+    "## 02) Key Distribution: Show the distribution of musical keys across all tracks to find out if some keys are more common in popular music."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "b5b02f71",
    "metadata": {},
    "outputs": [
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "5357b57e",
+   "id": "34c35c60",
    "metadata": {},
    "source": [
     "The generated plot is a histogram that visualizes the distribution of musical keys across all tracks in the dataset. Each bar represents one of the twelve musical keys, labeled from 'C' to 'B', and the height of the bar indicates the frequency of tracks in that particular key.\n",
@@ -437,12 +439,12 @@
    "id": "527d26c6",
    "metadata": {},
    "source": [
-    "# 03) Duration of Tracks: Create a histogram of track durations to see the common lengths of tracks and identify any outliers."
+    "## 03) Duration of Tracks: Create a histogram of track durations to see the common lengths of tracks and identify any outliers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "aea33e04",
    "metadata": {},
    "outputs": [
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327ca593",
+   "id": "2d5434c5",
    "metadata": {},
    "source": [
     "The histogram of track durations would display the distribution of track lengths in minutes. The x-axis would represent the duration of tracks in minutes, and the y-axis would represent the frequency of tracks within each duration interval. The histogram would have 20 bins, providing a detailed view of the distribution.\n",
@@ -488,12 +490,12 @@
    "id": "0ace6a55",
    "metadata": {},
    "source": [
-    "# 04) Speechiness in Different Genres: Box plots of 'speechiness' for each genre to compare the presence of spoken words in tracks across different genres. "
+    "## 04) Speechiness in Different Genres: Box plots of 'speechiness' for each genre to compare the presence of spoken words in tracks across different genres. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "2dd13d11",
    "metadata": {},
    "outputs": [
@@ -525,7 +527,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "23c52dcd",
+   "id": "ec701134",
    "metadata": {},
    "source": [
     "The described plot is a collection of box plots, each representing the distribution of 'speechiness' within a different musical genre. The 'speechiness' feature measures the presence of spoken words in a track, with higher values indicating more speech-like sounds and lower values indicating more music-like sounds.\n",
@@ -548,12 +550,12 @@
    "id": "7adbaada",
    "metadata": {},
    "source": [
-    "# 05) Acousticness Over Time: Showing the change in 'acousticness' over the years to see if music is becoming more or less acoustic."
+    "## 05) Acousticness Over Time: Showing the change in 'acousticness' over the years to see if music is becoming more or less acoustic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "605b4e17",
    "metadata": {},
    "outputs": [],
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "6dc2b6a5",
    "metadata": {},
    "outputs": [],
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "0d4842ea",
    "metadata": {},
    "outputs": [
@@ -605,7 +607,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "9f50241f",
+   "id": "55790546",
    "metadata": {},
    "source": [
     "The plot described would tell a story about the evolution of music's acoustic quality over time. By plotting the average acousticness against the album release year, we can observe trends that might indicate shifts in musical production and artist preferences.\n",
@@ -626,12 +628,12 @@
    "id": "d1e63102",
    "metadata": {},
    "source": [
-    "# 06) Tempo Distribution by Genre: KDE plots for 'tempo' separated by genre to see if certain genres tend to have faster or slower tempos."
+    "## 06) Tempo Distribution by Genre: KDE plots for 'tempo' separated by genre to see if certain genres tend to have faster or slower tempos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "1173c5b0",
    "metadata": {},
    "outputs": [
@@ -668,8 +670,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b71b90ff",
+   "cell_type": "markdown",
+   "id": "df81ba7b",
    "metadata": {},
    "source": [
     "The described plot would be a series of Kernel Density Estimate (KDE) plots, each representing the distribution of tempos within a specific genre. The x-axis would show the tempo in beats per minute (BPM), and the y-axis would represent the density of tracks at each tempo value. Each genre would have its own KDE curve, potentially with different colors to distinguish them.\n",
@@ -686,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c15bb88c",
+   "id": "afd0d2b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -694,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01635bb4",
+   "id": "580b012e",
    "metadata": {},
    "outputs": [],
    "source": []
